--- a/index.html
+++ b/index.html
@@ -1,92 +1,318 @@
 <!doctype html>
 <html lang="pt">
-<head>
+  <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <!-- Bootstrap CSS -->
-    <link href="bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3">
-    <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Carro Inteligente</title>
-</head>
-<body>
-  <script src="./script.js"></script>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-    <a class="navbar-brand" id="username" href="#">...</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" onclick="set_fragment('climatizacao')">Climatização</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" onclick="set_fragment('mapa')">Mapa</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" onclick="set_fragment('multimedia')">Multimédia</a>
-        </li>
-        <li class="nav-item" id="manutencao">
-          <a class="nav-link" onclick="set_fragment('manutencao')">Manutenção</a>
-        </li>
-      </ul>
-      <button onclick="change_user()" class="btn btn-outline-success my-2 my-sm-0">Mudar Utilizador</button>
-    </div>
-  </nav>
+    <script src="jquery-3.6.0.js"></script>
+    <script src="script.js"></script>
+  </head>
+  <body>
+    <script>
 
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-xs-12 col-sm-12 col-md-12">
-        <iframe id="iframe_fragment" src="climatizacao.html"></iframe>
-      </div>
-    </div>
-  </div>
+      function render() {
+        $.get(API_URL + "/sensors.php", (data) => {
 
-  <script>
+          $("#sensors_table").children().remove();
 
-    
-    async function fill_username() {
+          data.data.forEach(sensor => {
 
-      let user = await check_session();
+            $("#sensors_table").last().append(`<tr><td scope="row">${sensor.name}</td><td>${sensor.display_name}</td><td>${sensor.value}</td><td>${sensor.time}</td><td>${sensor.type}</td></tr>`);
+            
+            switch(sensor.name) {
 
-      if(user.role != "mechanic") {
-        document.getElementById("manutencao").remove();
+              case 'ambient_light':
+                $("#ambient_light_value").text(sensor.value == 1 ? "Sim" : "Não");
+                $("#ambient_light_icon").attr("src", sensor.value == 1 ? "dia.png" : "noite.png");
+                $("#ambient_light_update").text(`${new Date(sensor.time * 1000).getHours()}:${new Date(sensor.time * 1000).getMinutes()}`);
+                break;
+
+              case 'inside_temp':
+                $("#inside_temp_value").text(`${sensor.value.toFixed(2)}ºC`);
+                $("#inside_temp_update").text(`${new Date(sensor.time * 1000).getHours()}:${new Date(sensor.time * 1000).getMinutes()}`);
+                $("#inside_temp_icon").attr("src", sensor.value >= 22 ? "quente.png" : "frio.png");
+                break;
+
+              case 'reverse':
+                $("#reverse_value").text(sensor.value == 1 ? "Sim" : "Não");
+                $("#reverse_icon").attr("src", sensor.value == 1 ? "marcha_atras.png" : "frente.png");
+                $("#reverse_update").text(`${new Date(sensor.time * 1000).getHours()}:${new Date(sensor.time * 1000).getMinutes()}`);
+                break;
+
+              case 'headlights':
+                $("#headlights_value").text(sensor.value == 1 ? "Sim" : "Não");
+                $("#headlights_update").text(`${new Date(sensor.time * 1000).getHours()}:${new Date(sensor.time * 1000).getMinutes()}`);
+                if(sensor.automatic == 1) {
+                  $("#headlights_on").removeClass("active");
+                  $("#headlights_off").removeClass("active");
+                  $("#headlights_auto").addClass("active");
+                } else {
+                  if(sensor.value == 1) {
+                    $("#headlights_on").addClass("active");
+                    $("#headlights_off").removeClass("active");
+                    $("#headlights_auto").removeClass("active");
+                  } else {
+                    $("#headlights_on").removeClass("active");
+                    $("#headlights_off").addClass("active");
+                    $("#headlights_auto").removeClass("active");
+                  }
+                }
+                break;
+
+              case 'ac':
+                $("#ac_value").text(sensor.value == 1 ? "Sim" : "Não");
+                $("#ac_update").text(`${new Date(sensor.time * 1000).getHours()}:${new Date(sensor.time * 1000).getMinutes()}`);
+                if(sensor.automatic == 1) {
+                  $("#ac_on").removeClass("active");
+                  $("#ac_off").removeClass("active");
+                  $("#ac_auto").addClass("active");
+                } else {
+                  if(sensor.value == 1) {
+                    $("#ac_on").addClass("active");
+                    $("#ac_off").removeClass("active");
+                    $("#ac_auto").removeClass("active");
+                  } else {
+                    $("#ac_on").removeClass("active");
+                    $("#ac_off").addClass("active");
+                    $("#ac_auto").removeClass("active");
+                  }
+                }
+                break;
+
+              case 'parking':
+                $("#parking_value").text(sensor.value == 1 ? "Perigo" : "Seguro");
+                $("#parking_update").text(`${new Date(sensor.time * 1000).getHours()}:${new Date(sensor.time * 1000).getMinutes()}`);
+                if(sensor.value == 0) {
+                  $("#parking_alert").text("SEGURO");
+                  $("#parking_alert").addClass("alert-success");
+                  $("#parking_alert").removeClass("alert-danger");
+                } else {
+                  $("#parking_alert").text("PERIGO");
+                  $("#parking_alert").addClass("alert-danger");
+                  $("#parking_alert").removeClass("alert-success");
+                }
+
+            }
+          });
+
+        });
       }
 
-      document.getElementById("username").innerHTML = `Bem vindo, <b>${user.username}</b>`;
-    }
+      $(document).ready(() => {
 
-    fill_username();
+        setInterval(render, 1000);
 
-    function set_fragment(name) {
+        $("#headlights_on").click((event) => {
+          $.post(API_URL + "/set_automatic.php", {name: "headlights", value: 0}, (data) => {
+            $.post(API_URL + "/sensors.php", {name: "headlights", value: 1}, (data) => {
+              render();
+            });
+          });
+        });
 
-      const fragment = document.getElementById("iframe_fragment");
+        $("#headlights_off").click((event) => {
+          $.post(API_URL + "/set_automatic.php", {name: "headlights", value: 0}, (data) => {
+            $.post(API_URL + "/sensors.php", {name: "headlights", value: 0}, (data) => {
+              render();
+            });
+          });
+        });
 
-      switch(name) {
-        case 'climatizacao':
-          fragment.src = "climatizacao.html";
-          break;
-        case 'mapa':
-          fragment.src = "mapa.html";
-          break;
-        case 'multimedia':
-          fragment.src = "multimedia.html";
-          break;
-        case 'manutencao':
-          fragment.src = "manutencao.html";
-          break;
-      }
-    }
+        $("#headlights_auto").click((event) => {
+          $.post(API_URL + "/set_automatic.php", {name: "headlights", value: 1}, (data) => {
+            render();
+          });
+        });
 
-    function change_user() {
 
-      document.cookie = "";
-      document.location.href = "login.html";
-    }
+        $("#ac_on").click((event) => {
+          $.post(API_URL + "/set_automatic.php", {name: "ac", value: 0}, (data) => {
+            $.post(API_URL + "/sensors.php", {name: "ac", value: 1}, (data) => {
+              render();
+            });
+          });
+        });
 
-  </script>
-  
-</body>
+        $("#ac_off").click((event) => {
+          $.post(API_URL + "/set_automatic.php", {name: "ac", value: 0}, (data) => {
+            $.post(API_URL + "/sensors.php", {name: "ac", value: 0}, (data) => {
+              render();
+            });
+          });
+        });
+
+        $("#ac_auto").click((event) => {
+          $.post(API_URL + "/set_automatic.php", {name: "ac", value: 1}, (data) => {
+            render();
+          });
+        });
+
+      });
+    </script>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Dashboard - Carro Inteligente</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="seguranca.html">Segurança</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="exterior.html">Exterior</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="historico.html">Histórico</a>
+              </li>
+            </ul>
+            <a class="btn btn-outline-success" href="logout.html">Logout</a>
+          </div>
+        </div>
+      </nav>
+    <!--HEADER--> 
+    <div class="container text-center">
+        <div class="row">
+            <div class="col-sm-4">
+                <div class="card">
+                    <div class="card-header">
+                        <p><b>Luminosidade: </b><span id="ambient_light_value"></span></p>
+                    </div>
+                    <div class="card-body">
+                        <!--Colocar sol ou lua dependedo da luz-->
+                        <img style="width: 50%;" src="noite.png" class="card-img-top" id="ambient_light_icon" alt="Luminosidade">
+                    </div>
+                    <div class="card-footer" style="text-align: center;">
+                        <p><b>Atualização: </b><span id="ambient_light_update"></span></p>
+                    </div>
+                  </div>
+                </div>
+            <div class="col-sm-4">
+                <div class="card" >
+                    <div class="card-header">
+                        <p><b>Temperatura: </b><span id="inside_temp_value"></span></p>
+                    </div>
+                    <div class="card-body">
+                        <img id="inside_temp_icon" style="width: 50%;"src="quente.png" class="card-img-top" alt="Temperatura" >
+                    </div>
+                    <div class="card-footer" style="text-align: center;">
+                        <p><b>Atualização: </b><span id="inside_temp_update"></span></p>
+                    </div>
+                  </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="card">
+                    <div class="card-header">
+                        <p><b>Marcha-Atrás: </b><span id="reverse_value"></span></p>
+                    </div>
+                    <div class="card-body">
+                        <img style="width: 50%;" src="frente.png" class="card-img-top" id="reverse_icon" alt="Direção">
+                    </div>
+                    <div class="card-footer" style="text-align: center;">
+                        <p><b>Atualização: </b><span id="reverse_update"></span></p>
+                    </div>
+                  </div>
+            </div>
+          </div>
+            <br>
+            <br>
+            <br>
+            <div class="row">
+            <div class="col-sm-4">
+                <div class="card">
+                    <div class="card-header">
+                        <p><b>Luzes do carro: </b><span id="headlights_value"></span></p>
+                    </div>
+                    <div class="card-body">
+                        <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <label id="headlights_on" class="btn btn-secondary active"><!--caso esteja selecionado-->
+                              <input type="radio" name="options" id="option1" autocomplete="off"> Ligado
+                            </label>
+                            <label id="headlights_off" class="btn btn-secondary">
+                              <input type="radio" name="options" id="option2" autocomplete="off"> Desligado
+                            </label>
+                            <label id="headlights_auto" class="btn btn-secondary">
+                              <input type="radio" name="options" id="option3" autocomplete="off"> Automático
+                            </label>
+                          </div>
+                    </div>
+                    <div class="card-footer" style="text-align: center;">
+                        <p><b>Atualização:</b> <span id="headlights_update"></span></p>
+                    </div>
+                  </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="card">
+                    <div class="card-header">
+                        <p><b>Ar Condicionado: </b><span id="ac_value"></span></p>
+                    </div>
+                    <div class="card-body">
+                        <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                            <label id="ac_on" class="btn btn-secondary active"><!--caso esteja selecionado-->
+                              <input type="radio" name="options" id="option1" autocomplete="off" > Ligado
+                            </label>
+                            <label id="ac_off" class="btn btn-secondary">
+                              <input type="radio" name="options" id="option2" autocomplete="off"> Desligado
+                            </label>
+                            <label id="ac_auto" class="btn btn-secondary">
+                              <input type="radio" name="options" id="option3" autocomplete="off"> Automático
+                            </label>
+                          </div>
+                    </div>
+                    <div class="card-footer" style="text-align: center;">
+                        <p><b>Atualização:</b> <span id="ac_update"></span></p>
+                    </div>
+                  </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="card">
+                    <div class="card-header">
+                        <p><b>Perigo atrás do carro: </b><span id="parking_value"></span></p>
+                    </div>
+                    <div class="card-body">
+                        <div id="parking_alert" class="alert alert-danger" role="alert">
+                            PERIGO
+                        </div>
+                    </div>
+                    <div class="card-footer" style="text-align: center;">
+                        <p><b>Atualização: </b><span id="parking_update"></span></p>
+                    </div>
+                  </div>
+            </div>
+        </div>
+    </div>
+    </div>
+    <br>
+    <div class="container text-left">
+        <div class="card">
+            <div class="card-header">
+                <p><b>Tabela de sensores</b></p>
+            </div>
+            <div class="card-body">
+                <table class="table">
+                    <thead>
+                      <tr>
+                        <th scope="col">Identificador</th>
+                        <th scope="col">Sensores/Atuadores</th>
+                        <th scope="col">Valor</th>
+                        <th scope="col">Data de Atualização</th>
+                        <th scope="col">Tipo</th>
+                      </tr>
+                    </thead>
+                    <tbody id="sensors_table">
+                    </tbody>
+                  </table>
+            </div>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  </body>
 </html>
